{{$NEXT}}

0.42     2016-07-04

- Require the latest version of DateTime::Format::Mail in order to avoid
  warnings from DateTime 1.32+ that will cause some tests to fail. Reported by
  Olaf Alders. RT #115868.


0.41     2016-03-05

- Fixed header folding for headers that contain non-true values like
  '0'. Based on a patch for Email::Simple from
  pali. https://github.com/rjbs/Email-Simple/pull/11.


0.40     2016-01-30

- Fixed the stringification of some headers with regards to encoding. The
  Received header should never be encoded (and thus should never contain
  non-ASCII).

- Fixed headers which contain email addresses (To, From, CC) so that email
  addresses are properly encoded (I think). The phrase and comment portions of
  the address can contain encoded-words, but the address itself should never
  be encoded. Note that per RFC6531 addresses may contain UTF-8, but the MTA
  must support the SMTPUTF8 extension in order for the mail to be
  delivered. As of this release, SMTPUTF8 support does not appear to be very
  widespread, so I would strongly discourage the use of UTF-8 in email
  addresses!


0.39     2015-08-04

- Changed Email::Abstract::Courriel's ->get_body() method to return the entire
  email as a string, making it equivalent to ->as_string(). This is confusing,
  but looking at the few instances of code in Email::Transport that call
  ->get_body(), it seems like that's what this method is expected to
  do. Reported by Greg Oschwald. RT #106176.


0.38     2015-08-04

- Somewhat screwy release now deleted from PAUSE.


0.37     2015-02-26

- Fixed a test failure when MooseX::Params::Validate 0.21+ is
  installed. Reported by Slaven Rezic. RT #102382.


0.36     2014-08-15

- Trying to build an email with a header that started with a space caused the
  header value to be dropped entirely from the generated email. Patch by Greg
  Oschwald. PR #2.


0.35     2014-05-12

- Replaced all uses of File::Slurp with File::Slurp::Tiny. See RT #95479 for